test/invalid/this.js
function test() {
    var that = this;
}
test;
